# txtmux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
archive/: implement_plan.py  textual_example.py
examples/: basic_terminal.py
src/txtmux/: __init__.py  __main__.py  cli.py  client.py  constants.py  protocol.py  pty_handler.py  server.py  session.py  terminal_widget.py
tests/: __init__.py  test_cli.py  test_client.py  test_network_widget.py  test_protocol.py  test_pty_handler.py  test_server.py  test_session.py  test_terminal_screen.py
