[project]
name = "txtmux"
version = "0.1.0"
description = "Terminal multiplexer using Textual and pyte"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.79.1",
    "pyte>=0.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "mypy>=1.0.0"]

[project.scripts]
txtmux = "txtmux.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/txtmux"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
